Working code, simply retrive data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,19 @@ project(API)
 
 set(CMAKE_CXX_STANDARD 17)
 
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCURL_STATICLIB ")
 
-link_directories(curl/include/curl)
 
 # Aggiungi le Poco C++ Libraries al percorso di inclusione
-include_directories(${CMAKE_SOURCE_DIR}/curl/include)
-include_directories(${CMAKE_SOURCE_DIR}/curl/include/curl)
-
+include_directories(${PROJECT_SOURCE_DIR}/curl/include)
 # Aggiungi le Poco C++ Libraries al percorso delle librerie
-link_directories(${CMAKE_SOURCE_DIR}/curl/lib)
+link_directories(${PROJECT_SOURCE_DIR}/curl/lib)
 
 add_executable(API main.cpp)
 ## Specifica le librerie Poco da linkare al tuo eseguibile
 #target_link_libraries(API PUBLIC libcurl)
-target_link_libraries(API ${CMAKE_SOURCE_DIR}/curl/lib/libcurl.a)
+target_link_libraries(API ${PROJECT_SOURCE_DIR}/curl/lib/libcurl.dll.a)
 
 #list(APPEND CMAKE_MODULE_PATH "cpprestsdk/")
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DCURL_STATICLIB ")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCURL_STATICLIB ")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCURL_STATICLIB ")
